Changelog
=========

0.2 (unreleased)
----------------

- Now requires `collective.microdata.core`__ [keul]
- Moved logic to a ``IMicrodataVocabulary`` adapter [keul] 

__ https://github.com/keul/collective.microdata.core

0.1 (2012-07-22)
----------------

- Initial release