@@ -27,7 +27,7 @@
       for="*"
       name="http://schema.org/Event folder_listing_item"
       layer="..interfaces.IMicrodataEventLayer"
-      class="collective.microdata.core.browser.view.BaseItemListingView"
+      class="collective.microdata.contentlisting.browser.view.BaseItemListingView"
       template="templates/folder_listing_item.pt"
       permission="zope2.View"
       />
@@ -36,7 +36,7 @@
       for="*"
       name="http://schema.org/Event folder_summary_view_item"
       layer="..interfaces.IMicrodataEventLayer"
-      class="collective.microdata.core.browser.view.BaseItemListingView"
+      class="collective.microdata.contentlisting.browser.view.BaseItemListingView"
       template="templates/folder_summary_view_item.pt"
       permission="zope2.View"
       />
