@@ -11,6 +11,8 @@
   <include package="collective.microdata.core" />
   <include package=".browser" />
 
+  <adapter name="getRemoteUrl" factory=".indexer.getRemoteUrl" />
+
   <adapter for="Products.ATContentTypes.interfaces.IATEvent"
            provides="collective.microdata.core.interfaces.ISchemaOrgThing"
            factory=".adapter.EventMicrodataProvider" />
